Changes to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes.  Este es mi sitio web.  Sígueme en Twitter en celismx.  Si tienes dudas, pregúntame.
+        Hola amigos.  Este es mi sitio web.  Sígueme en Twitter en rudolphmilotic.  Si tienes dudas, pregúntame en vivo.
     </p>
 </body>
 </html>
